<resources>

    <string name="app_name">CurrencyApp</string>
    <string name="exchange_rates">Kursy walut</string>
    <string name="ATM">Bankomaty</string>
    <string name="atm">atm</string>
    <string name="exchange_calculator">Kalkulator walut</string>
    <string name="no_internet">Brak połączenia z Internetem</string>
    <string name="no_internet_message"> Potrzebujesz mieć połączenie z Internetem, żeby sprawdzić aktualne kursy walut.</string>
    <string name="calculator_no_internet_message"> Potrzebujesz mieć połączenie z Internetem, żeby korzystać z kalkulatora walut.</string>
    <string name="history_no_internet_message"> Potrzebujesz mieć połączenie z Internetem, żeby wyświetlić historyczne kursy walut.</string>
    <string name="old_data_message">Wyświetlane dane mogą być nieakutalne. Zostały one pobrane w dniu: %1$s</string>
    <string name="find">Szukaj</string>
    <string name="AllATM">Wszystkie Bankomaty</string>
    <string name="wybierz">Wybierz bankomat</string>
    <string name="downloading_data">Pobieranie danych...</string>
    <string name="calculator_result_title">Otrzymasz</string>
    <string name="calculator_result_text">Wynik..</string>
    <string name="calculator_button_text">Wymień</string>
    <string name="calculator_checkbox_text">Wymień na PLN</string>
    <string name="calculator_exchange_to_title">Wymień na</string>
    <string name="calculator_exchange_from_text">Wprowadź kwotę..</string>
    <string name="calculator_exchange_from_title">Chcę wymienić</string>
    <string name="calculator_empty_value_message">Wprowadź kwotę, którą chcesz wymienić</string>
    <string name="currencies_calculator">Kalkulator Walut</string>
    <string name="exchange_rates_title">Kursy Walut</string>
    <string name="atms_title">Bankomaty</string>
    <string name="from">Z:</string>
    <string name="to">Na:</string>

    <string-array name="ATMs">
        <item>@string/wybierz</item>
        <item>@string/AllATM</item>
        <item>PKO</item>
        <item>mBank</item>
        <item>Millennium</item>
        <item>Bgż</item>
        <item>Wbk</item>
        <item>ING</item>
        <item>Planet Cash</item>
        <item>Euronet</item>
    </string-array>

    <string-array name="radius">
        <item>1km</item>
        <item>5km</item>
        <item>10km</item>
        <item>20km</item>
        <item>50km</item>
    </string-array>

</resources>
