<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView style="@style/button_card_main">

            <Button
                android:id="@+id/button_exchange_rates"
                style="@style/main_button_style"
                android:text="@string/exchange_rates" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/button_card_main">

            <Button
                android:id="@+id/button_calculator"
                style="@style/main_button_style"
                android:text="@string/exchange_calculator" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/button_card_main">

            <Button
                android:id="@+id/button_atms"
                style="@style/main_button_style"
                android:text="@string/ATM" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>